# ChangeLog for media-gfx/gimp-print
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.85 2007/05/23 08:10:50 genstef Exp $

  23 May 2007; Stefan Schweizer <genstef@gentoo.org>
  gimp-print-5.1.1.ebuild:
  restrict tests thanks to Paolo Pedroni <paolo.pedroni@iol.it> in bug 179486

  22 May 2007; Stefan Schweizer <genstef@gentoo.org>
  gimp-print-5.1.1.ebuild:
  hard-enable USE=nls to avoid compile problems thanks Neil Bothwick
  <neil@digimed.co.uk> in bug 179449

*gimp-print-5.1.1 (21 May 2007)

  21 May 2007; Stefan Schweizer <genstef@gentoo.org>
  +gimp-print-5.1.1.ebuild:
  version bump

  25 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  gimp-print-5.1.0.ebuild:
  Fix gimp-print for gimp-2.2 collision by renaming and add a gimp use flag to
  control the gimp printing plug-in creation

  25 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  -gimp-print-5.0.0.ebuild, gimp-print-5.1.0.ebuild:
  Fix collision thanks to jakub in bug 175943

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  +files/gimp-print-5.1.0-nonls.patch, gimp-print-5.1.0.ebuild:
  Fix USE=-nls, bug 171190

*gimp-print-5.1.0 (14 Mar 2007)

  14 Mar 2007; <genstef@gentoo.org> +gimp-print-5.1.0.ebuild:
  Version bump, bug 169321 also solves bug 148439

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> Manifest:
  Transition to Manifest2.

  14 Sep 2006; Stefan Schweizer <genstef@gentoo.org>
  gimp-print-5.0.0.ebuild:
  fix built_with_use check, thanks zzam and jakub

  19 Aug 2006; Stefan Schweizer <genstef@gentoo.org>
  -files/gutenprint-5.0.0-rc2-asneeded.patch, -gimp-print-5.0.0_rc2.ebuild,
  -gimp-print-5.0.0_rc3.ebuild, gimp-print-5.0.0.ebuild:
  remove old, remove imagemagick DEP thanks to valli <gentoo@valli.org> in bug
  144386

*gimp-print-5.0.0 (16 Aug 2006)

  16 Aug 2006; Stefan Schweizer <genstef@gentoo.org>
  +gimp-print-5.0.0.ebuild: