@@ -9,6 +9,7 @@ SHA256 50299f14547b955be738ba4a5b8632a699dfb6d75f1bd030df2a4b2c134f7f87 files/gi
 DIST gimp-print-4.2.7.tar.gz 5178122 RMD160 b517b1d3cff22347053c634ed96202588d93b63e SHA1 5a928b7fa8e83d2858d15e2bd22d143c2cd35bd8 SHA256 a6cfcbb4bf32d12a553252b98e6a6fdb5d44fe37debad4480bbc9326e2c69489
 DIST gutenprint-5.1.0.tar.bz2 4704727 RMD160 6eb4b3e7f4b4b70e133b2e0043b8a8153801ce48 SHA1 222596fd434f8b2719e49fcb541a3fced9959688 SHA256 7d9298bbc6ba06d3175f7b4b3060cbc406d9f96a4da965850f8f1ca227b9acf6
 DIST gutenprint-5.1.1.tar.bz2 4739718 RMD160 25e78a83c06a071f7479770ded661ce2705087f3 SHA1 56cf4256407fa31e9c0757fb135582ef994d11e8 SHA256 ab44fb7807d3746563eff600e3e328791705a7891ae8b72a506089c93039ab25
+DIST gutenprint-5.1.2.tar.bz2 4739305 RMD160 6b6a6c1d7c2b16d085c7aa8daa1f688c40b5e4e7 SHA1 0b7c2f3aa6d50c83cf5e851d4d25e57cb6c0af7d SHA256 71fc0a921bdc6c7495fe2d2381193483330086be982f7b68b68e87fb43bd97f2
 EBUILD gimp-print-4.2.7.ebuild 2393 RMD160 95f01a98cfa4bb6914388918e9bbf74a9c0cfc76 SHA1 7cfa03c83371240ff566360de8ae9d7f9ca14473 SHA256 020acccead6024af8af7ff777b1933ffc6110547882217d11b2762f2b80d4ba7
 MD5 e2687cb0f337cb6ce6f53f2dd2dc47b8 gimp-print-4.2.7.ebuild 2393
 RMD160 95f01a98cfa4bb6914388918e9bbf74a9c0cfc76 gimp-print-4.2.7.ebuild 2393
@@ -21,10 +22,14 @@ EBUILD gimp-print-5.1.1.ebuild 2339 RMD160 329bf69fef583efe132c3cc5a2f7f82f7fb86
 MD5 4868b9fca48dff274c1eebb97222a5ff gimp-print-5.1.1.ebuild 2339
 RMD160 329bf69fef583efe132c3cc5a2f7f82f7fb869d6 gimp-print-5.1.1.ebuild 2339
 SHA256 f8169c0ebcc2d0646f4b805db3583702a96a034e2c91e04d59bed0775c41d1de gimp-print-5.1.1.ebuild 2339
-MISC ChangeLog 12888 RMD160 c1707de4f181ebb8526221bde772fe147156e47c SHA1 085b54a8bbeff771faff98dbd9d3198ea753124c SHA256 0baf3f423ef72b864b5a3e528a0e9ccf4e1a8b99821efb8d341927f50175d891
-MD5 af6cbd5d2740f05250f63df04bc7ecf0 ChangeLog 12888
-RMD160 c1707de4f181ebb8526221bde772fe147156e47c ChangeLog 12888
-SHA256 0baf3f423ef72b864b5a3e528a0e9ccf4e1a8b99821efb8d341927f50175d891 ChangeLog 12888
+EBUILD gimp-print-5.1.2.ebuild 2339 RMD160 99a5f9b139c8e7f8e7bf7dff17b1a2ec465161c5 SHA1 43b3a5fd62c94fb4407a9f88efa9bb3be3adde1d SHA256 da2b2fb461b8cbf7dda78930759339605c48c2a37c34abfdb90863ff82a4a409
+MD5 ebead916e10f8f37c8efc35b81b7e5c0 gimp-print-5.1.2.ebuild 2339
+RMD160 99a5f9b139c8e7f8e7bf7dff17b1a2ec465161c5 gimp-print-5.1.2.ebuild 2339
+SHA256 da2b2fb461b8cbf7dda78930759339605c48c2a37c34abfdb90863ff82a4a409 gimp-print-5.1.2.ebuild 2339
+MISC ChangeLog 13018 RMD160 a617c1b211aa5bf64c0010d2bbae39d91e50f6d0 SHA1 d94ad4c9f1a8c88ba1b578d0bacbcb6a96844663 SHA256 9f5b78b2ec0df78bfa78f1b3029b7613aaffd7d48e9d9c4c778fa64614fd9e9d
+MD5 9d61c274c746073a6e8fa1feb76e464a ChangeLog 13018
+RMD160 a617c1b211aa5bf64c0010d2bbae39d91e50f6d0 ChangeLog 13018
+SHA256 9f5b78b2ec0df78bfa78f1b3029b7613aaffd7d48e9d9c4c778fa64614fd9e9d ChangeLog 13018
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 metadata.xml 161
@@ -38,3 +43,6 @@ SHA256 dbf7590b3e02cf94d28ea7337e90000468cb91f93ff7aea0013ecd2cd9d28663 files/di
 MD5 f4b19e8029bc489781da93216bcde620 files/digest-gimp-print-5.1.1 256
 RMD160 e2ceb691c375b6df338701a8840cb8663c28ec92 files/digest-gimp-print-5.1.1 256
 SHA256 8bd24f196ae76a98acb581664c52f7169f1db54e7b601de27476ea6984eeee4b files/digest-gimp-print-5.1.1 256
+MD5 cdb7d2dada0c8a155f46d1ffcbbc20ea files/digest-gimp-print-5.1.2 256
+RMD160 5ef8ada94132abe92152e23e16f4905f38459d32 files/digest-gimp-print-5.1.2 256
+SHA256 35f6088c70cb5cea1456285ac35100482e56402606711f1836c064397942eb3e files/digest-gimp-print-5.1.2 256
