@@ -1,0 +1,3 @@
+MD5 5c7cf1f082d9baa290307d36e1703568 gutenprint-5.1.2.tar.bz2 4739305
+RMD160 6b6a6c1d7c2b16d085c7aa8daa1f688c40b5e4e7 gutenprint-5.1.2.tar.bz2 4739305
+SHA256 71fc0a921bdc6c7495fe2d2381193483330086be982f7b68b68e87fb43bd97f2 gutenprint-5.1.2.tar.bz2 4739305
