@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/gimp-print
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.85 2007/05/23 08:10:50 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.86 2007/06/04 11:14:52 genstef Exp $
+
+*gimp-print-5.1.2 (04 Jun 2007)
+
+  04 Jun 2007; Stefan Schweizer <genstef@gentoo.org>
+  +gimp-print-5.1.2.ebuild:
+  version bump
 
   23 May 2007; Stefan Schweizer <genstef@gentoo.org>
   gimp-print-5.1.1.ebuild:
